# nanocoder

./: CODE_REVIEW_BUGS.md  TEST_RESULTS.md  agents.config.example.json  issue-128-analysis.md  issue-128-confirmation.md  nanocoder-chat-2025-12-27T02-17-55.083Z.md  package.json  pnpm-lock.yaml
.github-issues/: 001-failing-file-snapshot-tests.md  002-silent-error-handling.md  003-race-conditions.md  004-memory-resource-leaks.md  005-security-improvements.md
.nanocoder/commands/gsd/: done.md  init.md  next.md  plan.md  status.md
.nanocoder/plans/: claude-planning-review-workflow.md
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: session-context-management.md  test-coverage-gaps.md
rust-port/: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
rust-port/crates/nanocoder-ai/: Cargo.toml
rust-port/crates/nanocoder-ai/src/: anthropic.rs  client.rs  lib.rs  openai.rs  provider.rs  streaming.rs  tool_parser.rs
rust-port/crates/nanocoder-cli/: Cargo.toml
rust-port/crates/nanocoder-cli/src/: bridge.rs  lib.rs  main.rs  server.rs
rust-port/crates/nanocoder-cli/tests/: integration_tests.rs
rust-port/crates/nanocoder-config/: Cargo.toml
rust-port/crates/nanocoder-config/src/: config.rs  env.rs  lib.rs  paths.rs  preferences.rs  provider.rs
rust-port/crates/nanocoder-core/: Cargo.toml
rust-port/crates/nanocoder-core/src/: error.rs  lib.rs  message.rs  parser.rs  tool.rs  types.rs
rust-port/crates/nanocoder-mcp/: Cargo.toml
rust-port/crates/nanocoder-mcp/src/: client.rs  lib.rs  protocol.rs  transport.rs
rust-port/crates/nanocoder-tokenization/: Cargo.toml
rust-port/crates/nanocoder-tokenization/src/: anthropic.rs  counter.rs  lib.rs  openai.rs  tokenizer.rs
rust-port/crates/nanocoder-tools/: Cargo.toml
rust-port/crates/nanocoder-tools/src/: bash.rs  executor.rs  file_ops.rs  lib.rs  registry.rs  search.rs  web.rs
source/: ai-sdk-client-error-handling.spec.ts  ai-sdk-client-maxretries.spec.ts  ai-sdk-client.ts  app.tsx  client-factory.ts  commands.ts  prompt-history.ts
source/ai-sdk-client/: ai-sdk-client.ts  multi-client-manager.ts
source/ai-sdk-client/providers/: azure-provider-factory.ts
source/app/: App.tsx
source/app/components/: app-container.tsx
source/app/prompts/: coding-prompt.md  main-prompt.md  planning-prompt.md  review-prompt.md
source/app/utils/: app-util.ts  appUtils.spec.ts  appUtils.ts
source/commands/: checkpoint.tsx  clear.tsx  compact.tsx  custom-commands.tsx  exit.ts  export.tsx  help.tsx  index.ts  init.tsx  lsp.tsx  mcp.tsx  resume.tsx  usage.tsx  workflow.tsx
source/components/: chat-queue.tsx  context-indicator.tsx  error-message.tsx  info-message.tsx  model-selector.tsx  provider-selector.tsx  security-disclaimer.tsx  status.tsx  success-message.tsx  theme-selector.tsx  tool-confirmation.tsx  tool-message.tsx  warning-message.tsx  welcome-message.tsx
source/components/usage/: usage-display.tsx
source/components/workflow/: index.ts  phase-transition.tsx  review-display.tsx  task-list.tsx  workflow-status.tsx
source/config/: index.ts  migration.ts  paths.spec.ts  paths.ts  preferences.spec.ts  preferences.ts
source/context/: workflow-context.ts
source/hooks/: useAppHandlers.tsx  useAppInitialization.tsx  useAppState.tsx  useChatHandler.tsx  useContextManager.tsx  useModeHandlers.tsx  useToolHandler.tsx  useWorkflowHandler.tsx
source/hooks/chat-handler/: types.ts  useChatHandler.spec.tsx  useChatHandler.tsx
source/hooks/chat-handler/conversation/: conversation-loop.spec.ts  conversation-loop.tsx  tool-executor.spec.ts  tool-executor.tsx
source/hooks/chat-handler/utils/: context-checker.tsx  message-helpers.tsx
source/init/: existing-rules-extractor.ts  file-scanner.ts  framework-detector.ts  project-analyzer.ts
source/lsp/: lsp-client.ts  server-discovery.ts
source/markdown-parser/: index.ts
source/mcp/: transport-factory.ts
source/models/: models-cache.spec.ts  models-cache.ts  models-dev-client.ts
source/services/: workflow-manager.ts  workflow-persistence.ts
source/session/: index.ts  session-manager.ts  session-service.ts  session.spec.ts  types.ts
source/system/: detector.ts
source/tools/: execute-bash.spec.tsx  execute-bash.tsx  index.ts
source/tools/git/: git-branch-suggest.tsx  git-create-pr.tsx  git-smart-commit.tsx  git-status-enhanced.tsx  git-tools.spec.tsx  utils.ts
source/types/: app.ts  commands.ts  config.ts  core.ts  index.ts  workflow.ts
source/usage/: storage.spec.ts  storage.ts  tracker.spec.ts  tracker.ts
source/utils/: file-autocomplete.ts  file-content-loader.ts  logger.spec.ts  logger.ts  message-queue.tsx  prompt-processor.ts  tool-result-display.spec.tsx  tool-result-display.tsx
source/utils/logging/: config.spec.ts  config.ts  index.ts  logger-provider.spec.ts  logger-provider.ts  transports.ts
source/utils/logging/health-monitor/alerts/: alert-manager.spec.ts  alert-manager.ts
source/vscode/: extension-installer.ts  vscode-server.ts
source/wizard/: config-wizard.tsx
source/wizard/components/: edit-delete-menu.tsx  index.ts  item-summary.tsx  navigation-hints.tsx  wizard-field-input.tsx  wizard-header.tsx
source/wizard/hooks/: index.ts  use-edit-delete.ts  use-wizard-field-navigation.ts  use-wizard-keyboard.ts
source/wizard/steps/: location-step.tsx  mcp-step.tsx  provider-step.spec.tsx  provider-step.tsx
source/wizard/templates/: provider-templates.spec.ts  provider-templates.ts
