[package]
name = "nanocoder-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nanocoder-core = { path = "../nanocoder-core" }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = "1.10"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
