[package]
name = "nanocoder-tokenization"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nanocoder-core = { path = "../nanocoder-core" }
tiktoken-rs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
