[package]
name = "nanocoder-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nanocoder-core = { path = "../nanocoder-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
which = { workspace = true }
async-trait = { workspace = true }
quick-xml = { workspace = true }
